--- a/styles/_attachments.scss
+++ b/styles/_attachments.scss
@@ -38,10 +38,10 @@
     color: $secondary-text-color;
   }
 
-   [data-hc-focus="true"] {
+   &[data-hc-focus="true"] {
       outline: none;
-      border: 2px solid #1291AE;
-      background-color: #fff;
+      border: 2px solid $visited-link-color;
+      background-color: $background_color;
       transition: .5s,border-color .25s ease-in-out;
   }
 }
